--- a/room.html
+++ b/room.html
@@ -30,7 +30,12 @@
             };
 
             if (window["WebSocket"]) {
-                conn = new WebSocket("ws://" + document.location.host + "/" + {{.RoomID }} +"/ws");
+                var endpoint = "ws://"
+                if (location.protocol === 'https:') {
+                    // page is secure
+                    endpoint = "wss://"
+                }
+                conn = new WebSocket(endpoint + document.location.host + "/" + {{.RoomID }} +"/ws");
             console.log(document.location.host)
             conn.onclose = function (evt) {
                 var item = document.createElement("div");
